# helium

./: .dockerignore  .gitignore  .prettierrc  Cargo.toml  Dockerfile  astro.config.mjs  fly.toml  package.json  pnpm-lock.yaml  tsconfig.json
.cargo/: config.toml
api-server/: Cargo.toml
api-server/migrations/: 20250416024413_create-table.sql
api-server/migrations/2025-04-14-041232_create_table/: up.sql
api-server/src/: app_state.rs  config_setter.rs  lib.rs  main.rs  schema.rs
api-server/src/models/: app_state.rs  config_setter.rs  mod.rs  sqlx_structs.rs  tables_iden.rs
common-types/: Cargo.toml
helium-types/: Cargo.toml
helium-types/bindings/: BasicItem.ts
helium-types/src/: lib.rs  request.rs  request_util.rs  response.rs  util.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  lib.rs  model_util.rs  structs.rs
src/components/: Navbar.svelte  ProductConfirm.svelte  ProductSelector.svelte  ProductSettings.svelte
src/components/modes/cashier/: List.svelte  ProductList.svelte  ProductSelector.svelte  ProductSettings.svelte
src/layouts/: Layout.astro
src/lib/: state.svelte.ts  stores.ts  tauri-com.ts  types.ts
src/pages/: index.astro
src/types/: types.ts
