[package]
name = "api-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
axum = "0.8"
libsqlite3-sys = { version = "0.32", features = ["bundled"] }
diesel = { version = "2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel-async = { version = "0.5", features = ["sqlite", "sync-connection-wrapper", "async-connection-wrapper", "deadpool", "tokio"] }
diesel_migrations = { version = "2.2", features = ["sqlite"] }
tantivy = "0.24.0"
helium-types = { path = "../helium-types" }
dotenvy = "0.15.7"
clap = { version = "4.5.36", features = ["derive"] }
