[package]
name = "api-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "sqlite", "derive"] }
tantivy = "0.24.0"
helium-types = { path = "../helium-types", features = ["backend"]}
dotenvy = "0.15.7"
clap = { version = "4.5.36", features = ["derive"] }
