[package]
name = "api-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
axum = { version = "0.8", features = ["macros"]}
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "sqlite", "derive"] }
tantivy = "0.24"
helium-types = { path = "../helium-types", features = ["backend"]}
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive"] }
sea-query = { version = "0.32", features = ["thread-safe", "backend-sqlite", "with-chrono", "derive"] }
sea-query-binder = { version = "0.7", features = ["with-chrono", "runtime-tokio-native-tls", "sqlx-sqlite"] }
