[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.86.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4", features = [] }
tauri-plugin-log = "2.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.44.1", features = ["full"] }
tauri-plugin-http = { version = "2" }
helium-types = { path = "../helium-types" }
